# OOF2

./: .gitignore  CMakeLists.txt  DIR.py  GTK3-CHANGES.txt  README  README.html  README.md  README.txt  cmake_uninstall.cmake.in  debugging-notes  distname.py  installing-on-ubuntu-20.04  installing-on-ubuntu-22.04  localexclusions.py  make_dist  make_dist.in  oof2  oof2-build  oof2-clean  oof2-guitest  oof2-guitest.in  oof2-test  oof2-test.in  oof2.in  oof2extutils.py  oof2installlib.py  oof2setuputils.py  oof2test  oof3d  oofbuildtools.cmake  oofconfig.h.in  prereqs.txt  printversion.txt  pypath.py  setup.py  timing  todo.txt
EXTENSION_TEMPLATES/: CMakeLists.txt  CMakeLists_subdir.txt  README  TODO  __init__.py  oof2-extension-setup.in  oof2_extension_setup.in
EXTENSION_TEMPLATES/general_nonlinear_elasticity/: oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/nonconstant_force_density/: oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/nonconstant_force_density_example/nonconstant_force_density_example/: nonconstant_force_density_example.h  nonconstant_force_density_example.spy
EXTENSION_TEMPLATES/nonconstant_heat_source/: oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/nonconstant_heat_source_example/nonconstant_heat_source_example/: nonconstant_heat_source_example.C  nonconstant_heat_source_example.swg
EXTENSION_TEMPLATES/nonlinear_force_density/: __init__.py  oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/nonlinear_heat_conductivity/: oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/nonlinear_heat_source/: README  oof2template.C  oof2template.h  oof2template.spy  oof2template.swg
EXTENSION_TEMPLATES/ramberg-osgood/ramberg_osgood/: ramberg_osgood.C  ramberg_osgood.swg
EXTENSION_TEMPLATES/template/: README  setup.py
SRC/EXTENSIONS/: CMakeLists.txt  DIR.py  initialize.py
SRC/EXTENSIONS/diffusion/: CMakeLists.txt  DIR.py  __init__.py  charge.C  charge.h  charge.spy  charge.swg  diff_problem.py  diffusion.C  diffusion.h  diffusion.spy  diffusion.swg  ion.C  ion.h  ion.spy  ion.swg
SRC/EXTENSIONS/ramberg-osgood/: readme.tex
SRC/EXTENSIONS/ramberg_osgood/: CMakeLists.txt  README  __init__.py  ramberg_osgood.C  ramberg_osgood.h  ramberg_osgood.spy  ramberg_osgood.swg  readme.tex
SRC/common/: CMakeLists.txt  DIR.py  README  abstractimage.h  abstractimage.swg  activearea.C  activearea.h  activearea.spy  activearea.swg  activeareamod.py  argv.C  argv.h  argv.swg  array.h  atshutdown.py  autoload.py  backEnd.py  bitmask.C  bitmask.h  boolarray.C  boolarray.h  boolarray.swg  brushstyle.C  brushstyle.h  brushstyle.spy  brushstyle.swg  burn.C  burn.h  burn.spy  burn.swg  cachedvalue.h  canvasimage.swg  ccolor.C  ccolor.h  ccolor.swg  cdebug.C  cdebug.h  cdebug.spy  cdebug.swg  chunkyvector.h  (+165 more)
SRC/common/EXTRA/: DIR.py  gfxprof.py  gfxprof2.py
SRC/common/IO/: CMakeLists.txt  DIR.py  activeareamenu.py  activeareamodmenu.py  activityviewermenu.py  animationstyle.py  animationtimes.py  automatic.py  automaticdoc.py  binarydata.py  bitmapdisplay.py  bitoverlay.C  bitoverlay.h  bitoverlay.spy  bitoverlay.swg  bitoverlaydisplay.py  colordiffparameter.py  colormap.py  datafile.py  display.py  filenameparam.py  formatchars.py  genericselecttoolbox.py  gfxmanager.py  ghostgfxwindow.py  layereditor.py  mainmenu.py  menudump.py  menuparser.py  microstructureIO.py  microstructureIPC.py  microstructuremenu.py  oofcanvas.swg  oofmenu.py  outputdevice.py  parallelmainmenu.py  parameter.py  pdfoutput.py  pixelgroupIPC.py  pixelgroupmenu.py  (+24 more)
SRC/engine/: CMakeLists.txt  DIR.py  __init__.py  adaptivemeshrefinement.py  analysisdomain.py  analysissample.py  angle2color.C  angle2color.h  angle2color.spy  angle2color.swg  autoskeleton.py  bdyanalysis.C  bdyanalysis.h  bdyanalysis.swg  bdycondition.py  blockpre.C  blockpre.h  blockpre.swg  boundary.py  boundarybuilder.py  boundarycond.C  boundarycond.h  boundarycond.swg  boundarymodifier.py  builtinprops.py  cconjugate.C  cconjugate.h  cconjugate.swg  celectricfield.C  celectricfield.h  cfiddlenodesbaseParallel.C  cfiddlenodesbaseParallel.h  cfiddlenodesbaseParallel.spy  cfiddlenodesbaseParallel.swg  clipimage3d.C  clipimage3d.h  clipimage3d.spy  clipimage3d.swg  cmatrixmethods.C  cmatrixmethods.h  (+302 more)
SRC/engine/IO/: CMakeLists.txt  DIR.py  analyze.py  analyzemenu.py  animationtimes.py  anisocijkl.py  boundaryconditionIPC.py  boundaryconditionmenu.py  boundarymenu.py  centerfilldisplay.py  contour.C  contour.h  contour.spy  contour.swg  contourdisplay.py  displaymethods.py  (+55 more)
SRC/image/: CMakeLists.txt  DIR.py  autograin.C  autograin.h  autograin.spy  autograin.swg  autogroup.C  autogroup.swg  autogroupMP.C  autogroupMP.h  autogroupMP.swg  burn.C  burn.h  burn.spy  burn.swg  evenlyilluminate.C  imagecontext.py  imagemodifier.py  initialize.py  oofimage.C  oofimage.h  oofimage.spy  oofimage.swg  oofimage3d.C  oofimage3d.h  oofimage3d.py  oofimage3d.spy  oofimage3d.swg  pixeldifferentiator.C  pixeldifferentiator.h  pixeldifferentiator.spy  pixeldifferentiator.swg  pixelselectioncourieri.C  pixelselectioncourieri.h  pixelselectioncourieri.swg  pixelselectionmethod.py  pixelselectionmod.py  resampleimage.C  resampleimage.h  resampleimage.spy  (+2 more)
SRC/orientationmap/: CMakeLists.txt  DIR.py  burn.C  burn.h  burn.spy  burn.swg  genericreader.py  hkl.py  initialize.py  orientmapIO.py  orientmapdata.C  orientmapdata.h  orientmapdata.spy  orientmapdata.swg  orientmapdisplay.py  orientmapmenu.py  orientmapproperty.C  orientmapproperty.h  orientmapproperty.spy  orientmapproperty.swg  pixeldifferentiator.C  pixeldifferentiator.h  pixeldifferentiator.spy  pixeldifferentiator.swg  pixeldifferentiatoro.C  pixeldifferentiatoro.spy  pixeldifferentiatoro.swg  pixelinfoplugin.py  pixelselectioncouriero.C  pixelselectioncouriero.h  pixelselectioncouriero.swg  pixelselectionmethod.py  pixelselectionmod.py  polefigure.C  polefigure.h  polefigure.spy  polefigure.swg  tsl.py
(+1788 files in other folders)
